syntax = "proto3";

package bytebase.store;

import "google/protobuf/timestamp.proto";

option go_package = "generated-go/store";

// PrincipalType is the type of a principal.
enum PrincipalType {
  PRINCIPAL_TYPE_UNSPECIFIED = 0;
  // END_USER represents the human being using Bytebase.
  END_USER = 1;
  // SERVICE_ACCOUNT represents the external service calling Bytebase OpenAPI.
  SERVICE_ACCOUNT = 2;
  // SYSTEM_BOT represents the internal system bot performing operations.
  SYSTEM_BOT = 3;
  // WORKLOAD_IDENTITY represents external CI/CD workload identity.
  WORKLOAD_IDENTITY = 4;
}

// MFAConfig is the MFA configuration for a user.
message MFAConfig {
  // The otp_secret is the secret key used to validate the OTP code.
  string otp_secret = 1;

  // The temp_otp_secret is the temporary secret key used to validate the OTP code and will replace the otp_secret in two-phase commits.
  string temp_otp_secret = 2;

  // The recovery_codes are the codes that can be used to recover the account.
  repeated string recovery_codes = 3;

  // The temp_recovery_codes are the temporary codes that will replace the recovery_codes in two-phase commits.
  repeated string temp_recovery_codes = 4;

  // The temp_otp_secret_created_time is the timestamp when temp_otp_secret was created. Used to enforce expiration.
  google.protobuf.Timestamp temp_otp_secret_created_time = 5;
}

message UserProfile {
  google.protobuf.Timestamp last_login_time = 1;
  google.protobuf.Timestamp last_change_password_time = 2;
  // The source indicates where the user comes from. For now we support Entra ID SCIM sync, so the source could be Entra ID.
  string source = 3;
  // Workload identity configuration (only for WORKLOAD_IDENTITY type)
  WorkloadIdentityConfig workload_identity_config = 4;
}

// WorkloadIdentityConfig stores OIDC configuration for workload identity.
message WorkloadIdentityConfig {
  // ProviderType identifies the CI/CD platform.
  enum ProviderType {
    PROVIDER_TYPE_UNSPECIFIED = 0;
    GITHUB = 1;
    GITLAB = 2;
  }

  // Provider type (currently only GITHUB is supported)
  ProviderType provider_type = 1;
  // OIDC issuer URL
  string issuer_url = 2;
  // Allowed audiences for token validation
  repeated string allowed_audiences = 3;
  // Subject pattern to match against token subject claim
  string subject_pattern = 4;
}
